# Bobs-Corn

./: .dockerignore  .gitignore  README.md  docker-compose.yml
server/: .dockerignore  Dockerfile  README.md  pyproject.toml
server/src/bobscorn/: main.py
server/src/bobscorn/controllers/: buy_controller.py
server/src/bobscorn/dtos/: requests.py  responses.py
server/src/bobscorn/middlewares/: limits_wrapper.py  rate.py
server/tests/e2e/: test_e2e_api.py
web/: .dockerignore  README.md  package-lock.json  package.json  tailwind.config.js
web/src/: App.tsx  api.ts
